--- a/i18n/en.json
+++ b/i18n/en.json
@@ -10,13 +10,13 @@
 	"spam-blacklisted-email-text": "Your email address is currently forbidden from sending emails to other users.",
 	"spam-blacklisted-email-signup": "The given email address is currently forbidden from use.",
 	"spam-blacklisted-link": "{{int:spamprotectiontext}}\n{{int:spamprotectionmatch|$1}}",
-	"spam-invalid-lines": "The following spam blacklist {{PLURAL:$1|line is an|lines are}} invalid regular {{PLURAL:$1|expression|expressions}} and {{PLURAL:$1|needs|need}} to be corrected before saving the page:",
-	"spam-blacklist-desc": "Regex-based anti-spam tool allowing to blacklist URLs in pages and email addresses for registered users",
-	"log-name-spamblacklist": "Spam blacklist log",
-	"log-description-spamblacklist": "These events track spam blacklist hits.",
-	"logentry-spamblacklist-hit": "{{GENDER:$2|$1}} caused a spam blacklist hit on $3 by attempting to add $4.",
-	"right-spamblacklistlog": "View the spam blacklist log",
-	"action-spamblacklistlog": "view the spam blacklist log",
-	"right-sboverride": "Bypass the spam blacklist",
-	"action-sboverride": "Bypass the spam blacklist"
+	"spam-invalid-lines": "The following spam block list {{PLURAL:$1|line is an|lines are}} invalid regular {{PLURAL:$1|expression|expressions}} and {{PLURAL:$1|needs|need}} to be corrected before saving the page:",
+	"spam-blacklist-desc": "Regex-based anti-spam tool allowing to block list URLs in pages and email addresses for registered users",
+	"log-name-spamblacklist": "Spam block list log",
+	"log-description-spamblacklist": "These events track spam block list hits.",
+	"logentry-spamblacklist-hit": "{{GENDER:$2|$1}} caused a spam block list hit on $3 by attempting to add $4.",
+	"right-spamblacklistlog": "View the spam block list log",
+	"action-spamblacklistlog": "view the spam block list log",
+	"right-sboverride": "Bypass the spam block list",
+	"action-sboverride": "Bypass the spam block list"
 }
