Lowercase action message, according to convention
Change-Id: Ide5e75f6a756598872d4e0204c31ee115b1ca90c

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -18,5 +18,5 @@
 	"right-spamblacklistlog": "View the spam block list log",
 	"action-spamblacklistlog": "view the spam block list log",
 	"right-sboverride": "Bypass the spam block list",
-	"action-sboverride": "Bypass the spam block list"
+	"action-sboverride": "bypass the spam block list"
 }
